trying to move pages over

--- a/docs/_posts/2021/08/2021-08-18-knife.md
+++ b/docs/_posts/2021/08/2021-08-18-knife.md
@@ -5,7 +5,7 @@ categories:
   - "hack-the-box"
 tags: 
   - "htb"
-coverImage: "lame.png"
+coverImage: "/assets/lame.png"
 ---
 
 > A knife is as good as the one who wields it
