--- a/docs/_posts/2021/08/2021-08-18-knife.md
+++ b/docs/_posts/2021/08/2021-08-18-knife.md
@@ -1,10 +1,9 @@
----
+--
+layout: posts
 title: "Hack The Box - Knife"
 date: "2021-08-18"
-categories: 
-  - "hack-the-box"
-tags: 
-  - "htb"
+categories: "hack-the-box"
+tags: "htb"
 coverImage: "/assets/lame.png"
 ---
 
